fix modal show on mobile

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -72,4 +72,8 @@
   .menu footer {
     margin-left: auto;
   }
+
+  .menu-btn:hover .menu-btn__tooltip {
+    display: none;
+  }
 }
